--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,11 @@ on:
     branches:
       - main # Consider builds on push to main as well, adjust as needed
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
@@ -57,8 +62,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/yourproject.hex # Update this path
-          asset_name: yourproject-${{ github.run_number }}.hex
+          asset_path: ./build/avr-firmware.hex
+          asset_name: avr-firmware-${{ github.run_number }}.hex
           asset_content_type: application/octet-stream
 
       - name: Upload .ELF File to Release
@@ -67,6 +72,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/yourproject.elf # Update this path
-          asset_name: yourproject-${{ github.run_number }}.elf
+          asset_path: ./build/avr-firmware.elf
+          asset_name: avr-firmware-${{ github.run_number }}.elf
           asset_content_type: application/octet-stream
