--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,9 @@ on:
       - main
     paths-ignore:
       - '**.md' # Ignore markdown changes in PRs for builds
-  push:
-    branches:
-      - main # Consider builds on push to main as well, adjust as needed
+  # push:
+  #   branches:
+  #     - main
 
 permissions:
   contents: write
@@ -20,7 +20,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # required for github-action-get-previous-tag
       
       # Build the Docker image from Dockerfile in the .devcontainer directory
       - name: Build Docker Image
@@ -44,6 +47,50 @@ jobs:
             build/*.hex
             build/*.elf
 
+      # Get latest release number
+      - name: Get Previous tag
+        id: previoustag
+        uses: 'WyriHaximus/github-action-get-previous-tag@v1'
+        with:
+          fallback: 1.0.0 # Optional fallback tag to use when no tag can be found
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Get Next Minor Version
+        id: semver
+        uses: 'WyriHaximus/github-action-next-semvers@v1'
+        with:
+          version: ${{ steps.previoustag.outputs.tag }}
+
+      # Compute the next version based on the previous tag
+      - name: Compute Next Version
+        id: compute_version
+        run: |
+          PREVIOUS_TAG=${{ steps.previoustag.outputs.tag }}
+          IFS='.' read -ra VERSION <<< "$PREVIOUS_TAG"
+          MAJOR=${VERSION[0]}
+          MINOR=${VERSION[1]}
+          PATCH=${VERSION[2]}
+
+          # Increment the version
+          if [ "$MINOR" -eq 9 ] && [ "$PATCH" -eq 9 ]; then
+              # If both minor and patch are at 9, increment major and reset others
+              MAJOR=$((MAJOR+1))
+              MINOR=0
+              PATCH=0
+          elif [ "$PATCH" -eq 9 ]; then
+              # If patch is at 9, increment minor and reset patch
+              MINOR=$((MINOR+1))
+              PATCH=0
+          else
+              # Default behavior: increment patch
+              PATCH=$((PATCH+1))
+          fi
+
+          NEXT_VERSION="$MAJOR.$MINOR.$PATCH"
+          echo "Next version: $NEXT_VERSION"
+          echo "::set-output name=version::$NEXT_VERSION"
+
       # Create a release and upload the compiled artifacts
       - name: Create Release
         id: create_release
@@ -51,10 +98,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: release-${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          draft: false
-          prerelease: false
+          tag_name: ${{ steps.compute_version.outputs.version }}
+          release_name: Release ${{ steps.compute_version.outputs.version }}
+          draft: false # Make the release public (true makes it visible only to collaborators)
+          prerelease: false # Indicate that this is unstable pre-release
 
       - name: Upload .HEX File to Release
         uses: actions/upload-release-asset@v1
@@ -63,7 +110,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./build/avr-firmware.hex
-          asset_name: avr-firmware-${{ github.run_number }}.hex
+          asset_name: avr-firmware.hex
           asset_content_type: application/octet-stream
 
       - name: Upload .ELF File to Release
@@ -73,5 +120,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./build/avr-firmware.elf
-          asset_name: avr-firmware-${{ github.run_number }}.elf
+          asset_name: avr-firmware.elf
           asset_content_type: application/octet-stream
